--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ dependencies:
   fluro: "^1.3.1"
   path_provider: "^0.4.0"
   f_grecaptcha: "^1.0.0"
+  sqflite: any
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
