--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/logo.png
-    - assets/db/qlhs.db
+    - assets/qlhs.db
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
